# Operating-Systems-Term-Project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  fork  fork.c  install.sh  run_in_container.sh  sandbox  sandbox.c  unlink  unlink.c
installers/: install_linux.sh  install_macos.sh  install_windows.bat  install_windows.ps1
protected_directory/: random.txt  test_file.txt
src/: malicious_file_operations.c  malicious_program_unlink.c  malicious_unlink.c  sandbox  sandbox.c  sandbox_common.h  sandbox_linux.c  sandbox_logger.c  sandbox_logger.h  sandbox_macos  sandbox_macos.c  sandbox_windows.c  test_program  test_program.c
